[PDB-1145] GWT tree component sets item widths to 100%, this causes issues in IE with our fake scrollbars. Setting to "auto" instead

--- a/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
+++ b/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
@@ -126,6 +126,7 @@ legend {
 .tree-item-custom-widget{
   border: 1px solid transparent;
   padding:0;
+  width: auto !important;
 }
 .tree-item-custom-widget-selected{
   background-color: #5ED95E;
